# zebra-scanner-library

./: ._ssi_utils.c  ._ssi_utils.h  .gitignore  AUTHORS  DoCompile.sh  Makefile  Makefile.am  Makefile.in  README  README.md  TODO  auto-build.sh  autogen.sh  build.sh  configure  configure.ac  create-static-version.sh  libstylssi.pc.in  main.c  mlsBarcode.c  mlsBarcode.h  release.sh  report_zebra_scanner  ssi.h  ssi_utils.c  ssi_utils.h  stylssi.pc.in  tags  zebra  zebra-demo
autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3  traces.4
data/udev/: 99-scanner.rules
doc/: ref-flowchart.dia
doc/Module-Scanner-Zebra/Zebra-SE3300/: .~lock.PL-3307 Integration Guide_May 2015_14962410a.pdf#  .~lock.SE-3300_Integration_Guide_April_2015_14858904a.pdf#
doc/flow-communication/: auto-scanning-1.0.0.txt  auto-scanning-2.0.0.txt  manual-scanning-1.0.0.txt  manual-scanning-2.0.0.txt
example/: barcode_demo.c  barcode_test.c  main.c
examples/: CStylScanner_Demo_1.c  CStylScanner_Demo_2.c  Makefile.am  barcode_demo.c  barcode_test.c  mlsScannerAuto_Demo.c  mlsScannerExample.c  mlsScannerExample_Auto.c  mlsScannerExample_Common.c  mlsScannerExample_Common.h  mlsScannerExample_Manual.c  mlsScannerManual_Demo.c
release/: mlsScanner.tar.xz
src/: CStylScanner.c  CStylScannerConfig.c  CStylScannerConfig.h  CStylScannerDevice.c  CStylScannerDevice.h  CStylScannerPackage.c  CStylScannerPackage.h  CStylScannerSSI.c  CStylScannerSSI.h  CStylScannerUtils.h  CTemplate.c  CTemplate.h  Makefile.am  mlsBarcode.c  mlsBarcode.h  mlsDevice.c  mlsScanner.c  mlsScannerConfig.c  mlsScannerConfig.h  mlsScannerDevice.c  mlsScannerDevice.h  mlsScannerPackage.c  mlsScannerPackage.h  mlsScannerSSI.c  mlsScannerSSI.h  mlsScannerUtils.c  mlsScannerUtils.h  mlsUtils.h
systemd/: styl-yellowfin-scanner.service
tools/: Makefile.am  mlsScannerSetup.c
